--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
         <div class="projects-list">
             <h2 class="projects-list__header">ПРОЕКТЫ</h2>            
             <div class="projects-list__item">
-                <img class="projects-list__item-img" src="/resources/project_HC_Rigth.jpg" alt="">
+                <img class="projects-list__item-img" src="./resources/project_HC_Rigth.jpg" alt="">
                 <p class="projects-list__item-name">ЖК ПРАВОБЕРЕЖНЫЙ — 112 м² — 2023</p>
                 <a class="projects-list__item-ref" href="#">Подробнее →</a>
             </div>
             <div class="projects-list__item">
-                <img class="projects-list__item-img" src="/resources/project_HC_Norway.png" alt="">
+                <img class="projects-list__item-img" src="./resources/project_HC_Norway.png" alt="">
                 <p class="projects-list__item-name">ЖК НОРВЕЖСКИЙ ПАРК — 75 М² — 2023</p>
                 <a class="projects-list__item-ref" href="#">Подробнее →</a>
             </div>   
             <div class="projects-list__item">
-                <img class="projects-list__item-img" src="/resources/project_HC_Pine.png" alt="">
+                <img class="projects-list__item-img" src="./resources/project_HC_Pine.png" alt="">
                 <p class="projects-list__item-name">ЖК СОСНОВСКИЕ ОЗЕРА — 94 М² — 2022</p>
                 <a class="projects-list__item-ref" href="#">Подробнее →</a>
             </div>    
@@ -45,19 +45,19 @@
         <div class="services">
             <h2 class="services-list">УСЛУГИ</h2>
             <div class="services-list__item">
-                <img src="/resources/services_solution.png" alt="" class="services-list__item-img">
+                <img src="./resources/services_solution.png" alt="" class="services-list__item-img">
                 <p class="services-list__item-wrapper">Планировочное решение — от 2500₽/м²</p>
             </div>
             <div class="services-list__item">
-                <img src="/resources/services_disign.png" alt="" class="services-list__item-img">
+                <img src="./resources/services_disign.png" alt="" class="services-list__item-img">
                 <p class="services-list__item-wrapper">Дизайн-проект — от 3000₽/м²</p>
             </div>
             <div class="services-list__item">
-                <img src="/resources/services_supervision.jpg" alt="" class="services-list__item-img">
+                <img src="./resources/services_supervision.jpg" alt="" class="services-list__item-img">
                 <p class="services-list__item-wrapper">Авторский надзор — от 30 000₽ в месяц</p>
             </div>
             <div class="services-list__item">
-                <img src="/resources/services_equipment.jpg" alt="" class="services-list__item-img">
+                <img src="./resources/services_equipment.jpg" alt="" class="services-list__item-img">
                 <p class="services-list__item-wrapper">Комплектация — 5% от стоимости спецификации</p>
             </div>
         </div>
