--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <h3 class="interior-text">Мы - команда квалифицированных дизайнеров и архитекторов, занимающихся разработкой и реализацией дизайн-проектов</h3>        
         </div>
         <div id="about" class="about-us">
-            <h2>О НАС</h2>
-            <p>Студия основана в 2011 году. Полностью отдаемся проектированию и реализации интерьеров. К нам обращаются за уютом, индивидуальными решениями и практичностью. Находим конструктивные решения для каждого интерьера, вплоть до каждой детали — нацелены на результат.
+            <h2 class="about-us__header">О НАС</h2>
+            <p class="about-us__description">Студия основана в 2011 году. Полностью отдаемся проектированию и реализации интерьеров. К нам обращаются за уютом, индивидуальными решениями и практичностью. Находим конструктивные решения для каждого интерьера, вплоть до каждой детали — нацелены на результат.
             </p>
-            <a href="">Посмотреть услуги</a>
+            <a class="about-us__link" href="#service">Посмотреть услуги</a>
         </div> 
         <div id="project" class="projects-list">
             <h2 class="projects-list__header">ПРОЕКТЫ</h2>            
