--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
     </div>
     <div class="project-banner">        
-        <h3 class="project-banner__wrapper">Проект &#160Двухкомнтаной квартиры в ЖК Лесной Пейзаж</h3>        
+        <h3 class="project-banner__wrapper">Проект &#160Двухкомнатной квартиры в ЖК Лесной Пейзаж</h3>        
     </div>
     <div class="contact-section">
         <div id="contacts" class="contact">
