--- a/index.html
+++ b/index.html
@@ -90,14 +90,16 @@
             </p>           
         </div>
     </div> 
-    <footer class="container-footer">
-        <div class="footer__nav">
-            <a href="#about" class="footer__link">О НАС</a>
-            <a href="#project" class="footer__link">ПРОЕКТЫ</a>
-            <a href="#service" class="footer__link">УСЛУГИ</a>
-            <a href="#contacts" class="footer__link">КОНТАКТЫ</a>
+    <footer class="footer">
+        <div class="footer__wrapper">
+            <nav class="footer__nav" >
+                <a href="#about" class="footer__link">О НАС</a>
+                <a href="#project" class="footer__link">ПРОЕКТЫ</a>
+                <a href="#service" class="footer__link">УСЛУГИ</a>
+                <a href="#contacts" class="footer__link">КОНТАКТЫ</a>
+            </nav>
+            <p class="footer__title">студия дизайна интерьера Метрика — 2023</p>
         </div>
-        <p class="footer__title">студия дизайна интерьера Метрика — 2023</p>
     </footer>     
 </body>
 </html>
