--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
                 <img class="logo" src="./resources/Logo.jpg" alt="Логотип Метрика">
             </a>
         </div>
-        <div class="nav">
+        <nav class="nav">
             <a href="#about" class="nav__link">О НАС</a>
             <a href="#project" class="nav__link">ПРОЕКТЫ</a>
             <a href="#service" class="nav__link">УСЛУГИ</a>
             <a href="#contacts" class="nav__link">КОНТАКТЫ</a> 
-        </div>
+        </nav>
     </div>    
     <div class="container">        
         <h1>Современные и стильные интерьеры для комфортной жизни</h1>
