--- a/index.html
+++ b/index.html
@@ -42,37 +42,39 @@
                 <a class="about-us__link" href="#service">Посмотреть услуги</a>
             </section>                       
             <section id="project" class="projects-list">
-                <h2 class="projects-list__header">ПРОЕКТЫ</h2>            
-                <div class="projects-list__item">
-                    <picture>
-                        <source  media="(max-width: 768px)" srcset="./resources/project_HC_Rigth_phone.jpg">  
-                        <source  media="(max-width: 1199px)" srcset="./resources/project_HC_Rigth_tablet.jpg">
-                        <source  media="(min-width: 1200px)" srcset="./resources/project_HC_Rigth.jpg">              
-                        <img class="projects-list__item-img" alt="Изображение ЖК ПРАВОБЕРЕЖНЫЙ"/>  
-                    </picture>
-                    <h3 class="projects-list__item-name">ЖК ПРАВОБЕРЕЖНЫЙ — 112 м² — 2023</h3>
-                    <a class="projects-list__item-ref" href="#">Подробнее →</a>
-                </div>
-                <div class="projects-list__item">
-                    <picture>
-                        <source  media="(max-width: 768px)" srcset="./resources/project_HC_Norway_phone.jpg">  
-                        <source  media="(max-width: 1199px)" srcset="./resources/project_HC_Norway_tablet.jpg">
-                        <source  media="(min-width: 1200px)" srcset="./resources/project_HC_Norway.jpg">              
-                        <img class="projects-list__item-img"  alt="Изображение ЖК НОРВЕЖСКИЙ ПАРК"/>  
-                    </picture>
-                    <h3 class="projects-list__item-name">ЖК НОРВЕЖСКИЙ ПАРК — 75 М² — 2023</h3>
-                    <a class="projects-list__item-ref" href="#">Подробнее →</a>
-                </div>   
-                <div class="projects-list__item">
-                    <picture>
-                        <source  media="(max-width: 768px)" srcset="./resources/project_HC_Pine_phone.jpg">  
-                        <source  media="(max-width: 1199px)" srcset="./resources/project_HC_Pine_tablet.jpg">
-                        <source  media="(min-width: 1200px)" srcset="./resources/project_HC_Pine.jpg">              
-                        <img class="projects-list__item-img" alt="Изображение ЖК СОСНОВСКИЕ ОЗЕРА"/>  
-                    </picture>
-                    <h3 class="projects-list__item-name">ЖК СОСНОВСКИЕ ОЗЕРА — 94 М² — 2022</h3>
-                    <a class="projects-list__item-ref" href="#">Подробнее →</a>
-                </div>    
+                <h2 class="projects-list__header">ПРОЕКТЫ</h2> 
+                <ul>
+                    <li class="projects-list__item">
+                        <picture>
+                            <source  media="(max-width: 768px)" srcset="./resources/project_HC_Rigth_phone.jpg">  
+                            <source  media="(max-width: 1199px)" srcset="./resources/project_HC_Rigth_tablet.jpg">
+                            <source  media="(min-width: 1200px)" srcset="./resources/project_HC_Rigth.jpg">              
+                            <img class="projects-list__item-img" alt="Изображение ЖК ПРАВОБЕРЕЖНЫЙ"/>  
+                        </picture>
+                        <h3 class="projects-list__item-name">ЖК ПРАВОБЕРЕЖНЫЙ — 112 м² — 2023</h3>
+                        <a class="projects-list__item-ref" href="#">Подробнее →</a>
+                    </li>
+                    <li class="projects-list__item">
+                        <picture>
+                            <source  media="(max-width: 768px)" srcset="./resources/project_HC_Norway_phone.jpg">  
+                            <source  media="(max-width: 1199px)" srcset="./resources/project_HC_Norway_tablet.jpg">
+                            <source  media="(min-width: 1200px)" srcset="./resources/project_HC_Norway.jpg">              
+                            <img class="projects-list__item-img"  alt="Изображение ЖК НОРВЕЖСКИЙ ПАРК"/>  
+                        </picture>
+                        <h3 class="projects-list__item-name">ЖК НОРВЕЖСКИЙ ПАРК — 75 М² — 2023</h3>
+                        <a class="projects-list__item-ref" href="#">Подробнее →</a>
+                    </li>
+                    <li class="projects-list__item">
+                        <picture>
+                            <source  media="(max-width: 768px)" srcset="./resources/project_HC_Pine_phone.jpg">  
+                            <source  media="(max-width: 1199px)" srcset="./resources/project_HC_Pine_tablet.jpg">
+                            <source  media="(min-width: 1200px)" srcset="./resources/project_HC_Pine.jpg">              
+                            <img class="projects-list__item-img" alt="Изображение ЖК СОСНОВСКИЕ ОЗЕРА"/>  
+                        </picture>
+                        <h3 class="projects-list__item-name">ЖК СОСНОВСКИЕ ОЗЕРА — 94 М² — 2022</h3>
+                        <a class="projects-list__item-ref" href="#">Подробнее →</a>
+                    </li>
+                </ul>       
                 <a href="#" class="btn">Смотреть все проекты</a>   
             </section> 
         </div>
